tests/failing/illegal_break.tau
public func main() -> int{
    return #paste("break 3;");
}
